--- a/LearningPod/res/layout/questionlayout.xml
+++ b/LearningPod/res/layout/questionlayout.xml
@@ -14,31 +14,57 @@
  
     
    <LinearLayout android:layout_width="match_parent"
-       android:layout_height="wrap_content" android:orientation="vertical">
+       android:layout_height="wrap_content" android:orientation="horizontal">
        
-       <TextView
-        android:id = "@+id/podname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:fontFamily="Museo300"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="80dp"
-        android:text = "Context Clues -  Level A "
-         />
+       <LinearLayout android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
        
-           
-       <TextView
-        android:id = "@+id/poddesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:textSize="13sp"  
-        android:layout_marginTop="0dp"      
-        android:layout_marginLeft="80dp"
-        android:text = "Determine the meaning of the unknown content"
-         />
+	       <TextView
+	        android:id = "@+id/podname"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textColor="#ffffff"
+	        android:textSize="20sp"
+	        android:fontFamily="Museo300"
+	        android:layout_marginTop="10dp"
+	        android:layout_marginLeft="80dp"
+	        android:text = "Context Clues -  Level A "
+	         />
+	       
+	           
+	       <TextView
+	        android:id = "@+id/poddesc"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textColor="#ffffff"
+	        android:textSize="13sp"  
+	        android:layout_marginTop="0dp"      
+	        android:layout_marginLeft="80dp"
+	        android:text = "Determine the meaning of the unknown content"
+	         />
+       </LinearLayout>
+
+       <LinearLayout
+           android:id="@+id/questionprogresscontainer"
+           android:layout_width="fill_parent"
+           android:gravity="right"
+           android:layout_height="fill_parent"
+           android:orientation="horizontal" 
+           android:layout_gravity="right"
+           android:layout_marginRight="35dp"
+           >
+
+        <!--    <view
+               android:layout_width="20dp"
+               android:layout_marginLeft="15dp"
+               android:layout_height="20dp"
+               android:layout_gravity="center"
+               android:layout_marginTop="5dp"
+               android:background="@drawable/dotwhite" /> -->       
+
+          
+       </LinearLayout>
        
    </LinearLayout> 
    
@@ -74,6 +100,18 @@
                 android:src="@drawable/refimg" 
                 android:adjustViewBounds="true"
                  />
+            
+            <TextView
+		        android:id = "@+id/quesbodyhighlighted"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:textColor="#000000"
+		        android:textSize="15sp"      
+		        android:layout_margin="5dp"
+		        android:background="#58FAF4"
+		        android:padding="20dp"
+		        android:text = "Read the sentence. Use context clues to help you figure out the meaning of the word jovial. Then, choose the correct meaning of the word jovial"
+        	 />
             
              <TextView
 		        android:id = "@+id/quesbody"
@@ -133,11 +171,11 @@
           
             
             <TextView
-		        android:id = "@+id/quesbody"
+		        android:id = "@+id/choicelabel"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:textColor="#000000"
-		        android:textSize="13sp"  
+		        android:textSize="13sp" 
 		        android:layout_marginLeft="15dp"
 		        android:layout_marginBottom="3dp"
 		        android:layout_marginTop="20dp"
@@ -160,7 +198,7 @@
                 
             </LinearLayout>
             
-            <Button android:layout_width="120dp" 
+            <Button android:layout_width="150dp" 
                 android:id="@+id/btnsubmitnext"
                 android:layout_gravity="center"
                 android:layout_height="30dp"
