--- a/LearningPod/res/menu/common_menu.xml
+++ b/LearningPod/res/menu/common_menu.xml
@@ -1,11 +1,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+   
+     <item
+        android:id="@+id/terms"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Terms"/>
+      <item
+        android:id="@+id/about"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="About"/>
+       <item
+        android:id="@+id/help"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Help"/>
+    
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/homemenu"
         android:orderInCategory="100"
         android:showAsAction="always"
         android:title="@string/action_settings"
         android:icon="@drawable/homebutton"/>
+    
+  
 
    </menu>
     
