--- a/LearningPod/res/layout/choice_view.xml
+++ b/LearningPod/res/layout/choice_view.xml
@@ -3,43 +3,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+   
     >
     
     <LinearLayout 
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:background="@drawable/choice_not_selected"
+                    android:layout_marginBottom="2dp">
                     
-                    <Button 
-                         android:id="@+id/btnselectchoice"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@drawable/graya"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="20dp"
-                        />
+                  <TextView
+				        android:id = "@+id/choicesequence"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        android:textColor="#ffffff"
+				        android:textSize="22sp"  
+				        android:layout_marginLeft="15dp"
+				        android:layout_marginTop="20dp"
+				        android:layout_marginBottom="20dp"	
+				        android:textStyle="bold"			        
+				        android:text = "A."
+		         	/>
                     
                     <TextView
 				        android:id = "@+id/choicebody"
 				        android:layout_width="match_parent"
 				        android:layout_height="wrap_content"
-				        android:textColor="#000000"
+				        android:textColor="#ffffff"
 				        android:textSize="15sp"  
 				        android:layout_marginLeft="15dp"
 				        android:layout_marginTop="20dp"
 				        android:layout_marginBottom="20dp"				        
 				        android:text = "Thoughtful and Serious"
+				        
 		         	/>
                     
                 </LinearLayout>
                 
+                
                  
-            <View
-			    android:layout_width="fill_parent"
-			    android:layout_height="1dp"		
-			    android:layout_marginLeft="15dp"
-			    android:background="#000000"
-		     />
-    
+           
    
 </LinearLayout>
