--- a/LearningPod/res/layout/home_screen.xml
+++ b/LearningPod/res/layout/home_screen.xml
@@ -26,7 +26,7 @@
         <LinearLayout android:id="@+id/horizontalscroller"
             android:layout_height="match_parent" 
             android:layout_width="wrap_content" 
-            android:orientation="horizontal" />>
+            android:orientation="horizontal" />
         
     </HorizontalScrollView>
    
