Summary screen complete
Summary screen is completed and back button is also included in this
build

--- a/LearningPod/res/layout/home_screen.xml
+++ b/LearningPod/res/layout/home_screen.xml
@@ -9,7 +9,7 @@
     android:background="#f4f4f4" >
 
     <TextView
-        android:id = "@+id/username"
+        android:id = "@+id/username1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#253646"
