--- a/LearningPod/res/layout/podquestionrelativeview.xml
+++ b/LearningPod/res/layout/podquestionrelativeview.xml
@@ -72,7 +72,7 @@
        android:weightSum="1"
        >
        
-        <LinearLayout 
+        <RelativeLayout 
         android:layout_width="0dp"
         android:layout_weight="0.5"
         android:layout_height="wrap_content"  
@@ -109,9 +109,10 @@
 		        android:layout_height="wrap_content"
 		        android:textColor="#000000"
 		        android:textSize="15sp" 
-		        android:layout_marginLeft="5dp"               
-                android:layout_marginRight="5dp"     
+		       	android:layout_below="@+id/alienforquestion" 
 		        android:layout_marginBottom="5dp"
+		        android:layout_marginLeft="5dp"               
+                android:layout_marginRight="5dp"   
 		        android:background="#F4FA58"
 		        android:padding="20dp"
 		        android:text = "Read the sentence. Use context clues to help you figure out the meaning of the word jovial. Then, choose the correct meaning of the word jovial"
@@ -124,6 +125,7 @@
 		        android:textColor="#ffffff"
 		        android:textSize="15sp"      
 		        android:layout_margin="5dp"
+		        android:layout_below="@+id/quesbodyhighlighted"
 		        android:text = "Read the sentence. Use context clues to help you figure out the meaning of the word jovial. Then, choose the correct meaning of the word jovial"
         	 />
              
@@ -133,7 +135,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"               
                 android:layout_marginRight="5dp"     
-                android:layout_marginTop="10dp"          
+                android:layout_marginTop="10dp"        
+                android:layout_below="@+id/quesbody"  
                 android:src="@drawable/alienwithlight" 
                 android:adjustViewBounds="true"
                  />
@@ -145,6 +148,7 @@
                  android:layout_marginRight="5dp"
                  android:layout_marginBottom="5dp"
                  android:animateLayoutChanges="true"
+                 android:layout_below="@+id/alienforexplanation"  
                  android:orientation="vertical"
                  android:background="#F4FA58">
                  
@@ -172,7 +176,7 @@
              </LinearLayout>
              
             
-        </LinearLayout>
+        </RelativeLayout>
         
         <LinearLayout 
         android:layout_width="0dp"
