--- a/LearningPod/res/values/themes.xml
+++ b/LearningPod/res/values/themes.xml
@@ -9,6 +9,6 @@
     <!-- ActionBar styles -->
     <style name="MyActionBar"
            parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">#253646</item>
+        <item name="android:background">#0B243B</item>
     </style>
 </resources>
