--- a/LearningPod/res/layout/mapview1.xml
+++ b/LearningPod/res/layout/mapview1.xml
@@ -20,7 +20,7 @@
     		    android:textSize="14sp"
     		    android:textColor="#ffffff"
     		    android:textStyle="bold"
-    		    android:text = "Multiple Meaning words"
+    		    android:text = "Context Clues -  Level A"
     		    android:layout_toRightOf="@+id/planet1"
     		    android:layout_marginTop="90dp"
     		    android:layout_marginLeft="5dp"/>
@@ -28,18 +28,18 @@
     		<ImageView
     		    android:id = "@+id/planet1ss"
     		    android:visibility="invisible"
-    		    android:layout_marginLeft="45dp"
-    		    android:layout_marginTop="35dp" 
+    		    android:layout_marginLeft="48dp"
+    		    android:layout_marginTop="0dp" 
     		    android:adjustViewBounds="true"
-    		    android:layout_width="40dp"
-    		    android:layout_height="40dp"
-    		    android:src="@drawable/spaceship"/>
+    		    android:layout_width="50dp"
+    		    android:layout_height="80dp"
+    		    android:src="@drawable/spaceshipwithoutflag"/>
     		
     		<LinearLayout 
     		    android:layout_width="50dp"    		    
     		    android:layout_height="5dp"
-    		    android:layout_marginTop="45dp" 
-    		    android:orientation="horizontal"
+    		    android:layout_marginTop="55dp" 
+    		    android:orientation="horizontal"    		     
     		    android:layout_toRightOf="@+id/planet1ss"
     		    android:weightSum="1">
     		    
@@ -54,10 +54,10 @@
     		    <View android:layout_width="0dp"
     		        android:id="@+id/planet1pbblue"
     		        android:layout_weight="0.8"
-    		        android:layout_height="5dp"
+    		        android:layout_height="5dp"    		        
     		        android:visibility="invisible"
     		        android:background="#8896a3"/>
-    		</LinearLayout>"
+    		</LinearLayout>
     		
     		
     		<ImageButton 
@@ -76,7 +76,7 @@
     		    android:textSize="14sp"
     		    android:textColor="#ffffff"
     		    android:textStyle="bold"
-    		    android:text = "Multiple Meaning words"
+    		    android:text = "Context Clues -  Level B"
     		    android:layout_toRightOf="@+id/planet2"
     		    android:layout_marginTop="185dp"
     		    android:layout_marginLeft="5dp"/>
@@ -84,18 +84,17 @@
     		<ImageView
     		    android:id = "@+id/planet2ss"
     		    android:visibility="invisible"
-    		    android:layout_marginLeft="195dp"
-    		    android:layout_marginTop="130dp" 
+    		    android:layout_marginLeft="205dp"
+    		    android:layout_marginTop="95dp" 
     		    android:adjustViewBounds="true"
-    		    android:layout_width="40dp"
-    		    android:layout_height="40dp"
-    		    android:src="@drawable/spaceship"/>
+    		    android:layout_width="50dp"
+    		    android:layout_height="80dp"
+    		    android:src="@drawable/spaceshipwithoutflag"/>
     		
     		<LinearLayout 
-    		    android:layout_width="50dp"
-    		    
+    		    android:layout_width="50dp"    		    
     		    android:layout_height="5dp"
-    		    android:layout_marginTop="135dp" 
+    		    android:layout_marginTop="145dp" 
     		    android:orientation="horizontal"
     		    android:layout_toRightOf="@+id/planet2ss"
     		    android:weightSum="1">
@@ -132,7 +131,7 @@
     		    android:textSize="14sp"
     		    android:textColor="#ffffff"
     		    android:textStyle="bold"
-    		    android:text = "Multiple Meaning words"
+    		    android:text = "Context Clues -  Level C"
     		    android:layout_toRightOf="@+id/planet3"
     		    android:layout_marginTop="270dp"
     		    android:layout_marginLeft="5dp"/>
@@ -141,17 +140,17 @@
     		    android:id = "@+id/planet3ss"
     		    android:visibility="invisible"
     		    android:layout_marginLeft="375dp"
-    		    android:layout_marginTop="220dp" 
+    		    android:layout_marginTop="185dp" 
     		    android:adjustViewBounds="true"
-    		    android:layout_width="40dp"
-    		    android:layout_height="40dp"
-    		    android:src="@drawable/spaceship"/>
+    		    android:layout_width="50dp"
+    		    android:layout_height="80dp"
+    		    android:src="@drawable/spaceshipwithoutflag"/>
     		
     		<LinearLayout 
     		    android:layout_width="50dp"
     		     
     		    android:layout_height="5dp"
-    		    android:layout_marginTop="225dp" 
+    		    android:layout_marginTop="235dp" 
     		    android:orientation="horizontal"
     		    android:layout_toRightOf="@+id/planet3ss"
     		    android:weightSum="1">
@@ -188,7 +187,7 @@
     		    android:textSize="14sp"
     		    android:textColor="#ffffff"
     		    android:textStyle="bold"
-    		    android:text = "Multiple Meaning words"
+    		    android:text = "Multiple Meaning words Level A"
     		    android:layout_toRightOf="@+id/planet4"
     		    android:layout_marginTop="200dp"
     		    android:layout_marginLeft="5dp"/>
@@ -197,17 +196,17 @@
     		    android:id = "@+id/planet4ss"
     		    android:visibility="invisible"
     		    android:layout_marginLeft="555dp"
-    		    android:layout_marginTop="150dp" 
+    		    android:layout_marginTop="115dp" 
     		    android:adjustViewBounds="true"
-    		    android:layout_width="40dp"
-    		    android:layout_height="40dp"
-    		    android:src="@drawable/spaceship"/>
+    		    android:layout_width="50dp"
+    		    android:layout_height="80dp"
+    		    android:src="@drawable/spaceshipwithoutflag"/>
     		
     		<LinearLayout 
     		    android:layout_width="50dp"
     		    
     		    android:layout_height="5dp"
-    		    android:layout_marginTop="155dp" 
+    		    android:layout_marginTop="165dp" 
     		    android:orientation="horizontal"
     		    android:layout_toRightOf="@+id/planet4ss"
     		    android:weightSum="1">
@@ -245,7 +244,7 @@
     		    android:textSize="14sp"
     		    android:textColor="#ffffff"
     		    android:textStyle="bold"
-    		    android:text = "Multiple Meaning words"
+    		    android:text = "Multiple Meaning words Level B"
     		    android:layout_toRightOf="@+id/planet5"
     		    android:layout_marginTop="170dp"
     		    android:layout_marginLeft="5dp"/>
@@ -254,17 +253,17 @@
     		    android:id = "@+id/planet5ss"
     		    android:visibility="invisible"
     		    android:layout_marginLeft="805dp"
-    		    android:layout_marginTop="120dp" 
+    		    android:layout_marginTop="85dp" 
     		    android:adjustViewBounds="true"
-    		    android:layout_width="40dp"
-    		    android:layout_height="40dp"
-    		    android:src="@drawable/spaceship"/>
+    		    android:layout_width="50dp"
+    		    android:layout_height="80dp"
+    		    android:src="@drawable/spaceshipwithoutflag"/>
     		
     		<LinearLayout 
     		    android:layout_width="50dp"
     		   
     		    android:layout_height="5dp"
-    		    android:layout_marginTop="125dp" 
+    		    android:layout_marginTop="135dp" 
     		    android:orientation="horizontal"
     		    android:layout_toRightOf="@+id/planet5ss"
     		    android:weightSum="1">
