--- a/LearningPod/res/layout/podquestionrelativeview.xml
+++ b/LearningPod/res/layout/podquestionrelativeview.xml
@@ -11,26 +11,7 @@
          android:layout_height="wrap_content"
          android:orientation="vertical">          
     
-   <LinearLayout android:layout_width="match_parent"
-       android:layout_height="60dp" android:orientation="horizontal" >
-       
-       <LinearLayout
-           android:id="@+id/questionprogresscontainer"
-           android:layout_width="fill_parent"
-           android:gravity="right"
-           android:layout_height="fill_parent"
-           android:orientation="horizontal" 
-           android:layout_gravity="right"
-           android:layout_marginRight="35dp"
-           android:layout_marginTop="10dp"
-	        android:layout_marginBottom="10dp"
-           >
-
-           
-          
-       </LinearLayout>
-       
-   </LinearLayout> 
+   
    
     <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" >
     
@@ -66,11 +47,22 @@
             
              <ImageView
                 android:id="@+id/alienforquestion"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"               
                 android:layout_marginRight="5dp"               
-                android:src="@drawable/alienwithlight" 
+                android:src="@drawable/alienleft" 
+                android:adjustViewBounds="true"
+                
+                 />
+              <ImageView
+                android:id="@+id/alienforquestionlight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"               
+                android:layout_marginRight="5dp"       
+                android:layout_marginTop="8dp"                    
+                android:src="@drawable/alienlightwithspaceleft" 
                 android:adjustViewBounds="true"
                  />
             
@@ -80,7 +72,7 @@
 		        android:layout_height="wrap_content"
 		        android:textColor="#000000"
 		        android:textSize="15sp" 
-		       	android:layout_below="@+id/alienforquestion" 
+		       	android:layout_below="@+id/alienforquestionlight" 
 		        android:layout_marginBottom="5dp"
 		        android:layout_marginLeft="5dp"               
                 android:layout_marginRight="5dp"   
@@ -102,15 +94,31 @@
              
              <ImageView
                 android:id="@+id/alienforexplanation"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"               
                 android:layout_marginRight="5dp"     
                 android:layout_marginTop="10dp"        
-                android:layout_below="@+id/quesbody"  
-                android:src="@drawable/alienwithlight" 
-                android:adjustViewBounds="true"
+                android:layout_below="@+id/quesbody"
+                android:layout_alignRight="@+id/quesbody"
+                 android:adjustViewBounds="true"  
+                android:src="@drawable/alienright" 
+               
                  />
+             
+             <ImageView
+                android:id="@+id/alienforexplanationlight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"               
+                android:layout_marginRight="5dp"     
+                android:layout_marginTop="20dp"        
+                android:layout_below="@+id/quesbody" 
+                android:adjustViewBounds="true" 
+                android:src="@drawable/alienlightwithspaceright" 
+                
+                 />
+             
              <LinearLayout 
                  android:id = "@+id/explanationcontainer"
                  android:layout_height="fill_parent"
@@ -118,10 +126,11 @@
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginBottom="5dp"
+                 android:layout_marginTop="15dp"
                  android:animateLayoutChanges="true"
                  android:layout_below="@+id/alienforexplanation"  
                  android:orientation="vertical"
-                 android:background="#F4FA58">
+                 android:background="#8896a3">
                  
                  <TextView 
                      android:layout_width="match_parent"
@@ -156,20 +165,36 @@
         android:orientation="vertical"        
         android:layout_margin="5dp"
     
-        >            
+        >       
+        	
+             <LinearLayout
+           android:id="@+id/questionprogressbarcontainer"
+           android:layout_width="fill_parent"
+           android:gravity="right"
+           android:layout_height="60dp"
+           android:orientation="horizontal" 
+           android:layout_gravity="right"
+           android:layout_marginRight="35dp"
+           android:layout_marginTop="10dp"
+	        android:layout_marginBottom="10dp"
+           >          
+          
+       </LinearLayout>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                >
                 
                  <ImageView 
                      android:id="@+id/choiceresulticon"
                      android:layout_width="30dp"
                      android:layout_height="30dp"                     
-                     android:layout_marginBottom="3dp"
-			       	 android:layout_marginTop="20dp"
+                     android:layout_marginBottom="3dp"			       	 
 			       	 android:layout_marginLeft="15dp"
-			       	 android:visibility="gone" 
+			       	 android:background="@drawable/tick"
+			       	 android:visibility="visible" 			       	
                      />
                  
                  <TextView
