--- a/LearningPod/res/layout/summarylayout.xml
+++ b/LearningPod/res/layout/summarylayout.xml
@@ -9,42 +9,7 @@
          android:layout_height="wrap_content"
          android:orientation="vertical"> 
          
-           <LinearLayout android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal">  
-         
-	          <ImageView 
-		         android:layout_width="20dp"
-		         android:layout_height="30dp"
-		         android:background="@drawable/arrow"
-		         android:layout_marginLeft="10dp"
-		         android:layout_gravity="center_vertical"/>
-	     
-    		 <TextView 
-		         android:id="@+id/gotomap"
-		         android:layout_width="wrap_content"
-		         android:layout_height="wrap_content"
-		         android:text = "MAP"
-		         android:textColor="#ffffff"
-		         android:textSize="24sp"
-		         android:textStyle="bold"
-		         android:layout_gravity="center_vertical"
-		         android:layout_marginLeft="10dp"/>
-         
-           <TextView
-		        android:id = "@+id/summarypodname"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textColor="#ffffff"
-		        android:textSize="22sp"
-		        android:fontFamily="Museo300"
-		        android:layout_marginTop="10dp"
-		        android:layout_marginBottom="10dp"
-		        android:layout_marginLeft="230dp"
-		        android:text = "Context Clues -  Level A"
-	         />
            
-           </LinearLayout>
            
            <LinearLayout             
 	       		android:layout_width="match_parent"
@@ -69,6 +34,14 @@
                	          android:layout_width="300dp"
                	          android:layout_height="300dp"
                	          android:background="@drawable/aliencorrectpercentage" />
+               	       <ImageView 
+               	          android:id="@+id/star"
+               	          android:layout_width="40dp"
+               	          android:layout_height="40dp"
+               	          android:layout_marginLeft="160dp"
+               	          android:layout_marginTop="80dp"
+               	          android:visibility="invisible"
+               	          android:background="@drawable/star" />
                	      
                	      <TextView
 						    android:id="@+id/correctpercentage"
