--- a/LearningPod/res/menu/common_menu.xml
+++ b/LearningPod/res/menu/common_menu.xml
@@ -16,6 +16,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Help"/>
+        <item
+        android:id="@+id/login"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Logout"/>
     
     
     
